# fun-kv

./: .gitignore  Cargo.toml
src/: constants.rs  error.rs  lib.rs  stats.rs
src/core/: builder.rs  cache.rs  init.rs  internal.rs  metadata.rs  mod.rs  operations.rs  persistence.rs  record.rs  recovery.rs  ttl.rs
src/storage/: format.rs  free_space_manager.rs  io.rs  metadata.rs  mod.rs  write_buffer.rs
src/tests/: allocator_tests.rs  atomic_tests.rs  builder_tests.rs  cache_tests.rs  concurrency_tests.rs  edge_cases_tests.rs  free_space_manager_tests.rs  hash_tests.rs  io_tests.rs  memory_tests.rs  metadata_tests.rs  mod.rs  operation_tests.rs  persistence_tests.rs  record_tests.rs  stats_tests.rs  timestamp_tests.rs  ttl_tests.rs  write_buffer_tests.rs
src/utils/: allocator.rs  hash.rs  mod.rs
tests/: allocator_tests.rs  hash_tests.rs  metadata_tests.rs  mod.rs  stats_tests.rs
