[package]
name = "fun-kv"
version = "0.1.0"
edition = "2024"

[dependencies]
# Data structures and synchronization
scc = "3.7.0"
ahash = "0.8.12"
parking_lot = { version = "0.12", features = ["arc_lock"] }
crossbeam-skiplist = "0.1.3"
crossbeam-epoch = "0.9"

# Memory management
bytes = "1"

# Error handling
thiserror = "2.0.18"

# Bytes Operating
bytemuck = { version = "1", features = ["derive"] }

# System
num_cpus = "1.16"